# pew

./: .gitignore  CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.hpp  Makefile  PEW_REWRITE_PROMPT.md  PlaylistWidget.hpp  PluginStudio.cpp  PluginStudio.hpp  README.md  about.html  build.sh  cidm_playlist.h  complexnum.c  display.rs  download.php  emotion.rs  garbage_collector.h  gitblame.py  helo_plugin.c  index.html  install_pew.sh  main.c  main.cpp  main.rs  pew  pew.C  pew.c  pew.h  pew_about.txt  pew_advanced.C  pew_backup.C  pew_test  pewbackup.C  pewdownload.html  programming lang  roadmap.txt  style.css  test.cpp  (+10 more)
arch-studio-source/artifacts/arch-studio/: index.html  package.json
arch-studio-source/lib/api-spec/: openapi.yaml
files(1)/: Cargo.toml  git.rs  narrative.rs
in-my-summer-time/: Makefile  README.md
in-my-summer-time/assets/levels/: level_1.map  level_2.map  level_3.map  level_4.map  level_5.map
in-my-summer-time/engine/: constants.h  enemy.c  enemy.h  game.c  game.h  input.c  input.h  main.c  map.c  map.h  raycast.c  raycast.h  render.c  render.h  texture.c  texture.h  weapon.c  weapon.h
in-my-summer-time/rust/: Cargo.toml
in-my-summer-time/tools/: generate_assets.py  generate_textures.py
pew/: pew.makefile
pew(backups)/: lexer.C  lexer.h  lib_math.c  lib_math.h  main.c  parser.C  vm.C  vm.h
pew(backups)/Translation/: lib_translate.c  lib_translate.h
pew(backups)/assests/: ast.h
pew(backups)/gui library/: lib_gui.C  lib_gui.h
scripts/: install_pew.sh
src/: pew.C
voidfall/: index.html
website/: download.php
(+44 files in other folders)
